# nova-django-starter-kit

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yml  docker-compose-local.yml  docker-compose.yml  pyproject.toml
backend/: manage.py
backend/core/: models.py
backend/testvista/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
backend/user/templates/user/: login.html  logout.html  register.html
common/: config.py  logging_config.py
docker/: Dockerfile  Dockerfile-local
requirements/: base.txt  local.txt
templates/: base.html
